--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                     <button onclick="changeImage('large_preto_fume.jpg')">Preto Fumê</button>
                     <button onclick="changeImage('large_rosa.jpg')">Pink</button>
                     <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
+		    <button onclick="changeImage('large_verde.jpg')">Verde</button>
                 </div>
                 <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20no%20Coqueteleira%20DFE%20FIT%20600%20ML.%20Preço:%20R$%2025,00." target="_blank" class="whatsapp-button">
                     <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
@@ -294,6 +295,7 @@
                     <img src="large_preto_fume.jpg" alt="Coqueteleira Preto Fumê" onclick="changeImage('large_preto_fume.jpg')">
                     <img src="large_azul_tifanni.jpg" alt="Coqueteleira Azul Tiffany" onclick="changeImage('large_azul_tifanni.jpg')">
                     <img src="large_rosa.jpg" alt="Coqueteleira Rosa" onclick="changeImage('large_rosa.jpg')">
+		    <img src="large_verde.jpg" alt="Coqueteleira Verde" onclick="changeImage('large_verde.jpg')">	
                 </div>
             </div>
         </div>
@@ -366,26 +368,95 @@
             </div>
         </div>
 
-        <!-- Conjunto Straps DFE FIT -->
-        <div id="strap" class="product-section">
-            <div class="product-image">
-                <img id="main-image-5" src="straps1.jpg" alt="CONJUNTO STRAPS DFE FIT" onclick="zoomImage(this)">
-            </div>
-            <div class="product-details">
-                <h2 class="product-title">Conjunto Straps DFE FIT</h2>
-                <p class="product-price">R$ 29,90</p>
-                <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20no%20Straps%20DFE.%20Preço:%20R$%2029,90." target="_blank" class="whatsapp-button">
-                    <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
-                </a>
-                <div class="thumbnail-gallery">
-                    <img src="straps1.jpg" alt="CONJUNTO STRAPS DFE FIT" onclick="changeImageStrap('straps1.jpg')">
-                    <video width="80" height="80" controls>
-                        <source src="strap_video.mp4" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
-                    </video>
-                </div>
-            </div>
+<!-- Conjunto Straps DFE FIT -->
+<div id="strap" class="product-section">
+    <div class="product-image">
+        <img id="main-image-5" src="straps1.jpg" alt="CONJUNTO STRAPS DFE FIT" onclick="zoomImage(this)">
+    </div>
+    <div class="product-details">
+        <h2 class="product-title">Conjunto Straps DFE FIT</h2>
+        <p class="product-price">R$ 29,90</p>
+        <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20no%20Straps%20DFE.%20Preço:%20R$%2029,90." target="_blank" class="whatsapp-button">
+            <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
+        </a>
+        <div class="thumbnail-gallery">
+            <img src="straps1.jpg" alt="CONJUNTO STRAPS DFE FIT" onclick="changeImageStrap('straps1.jpg')">
+            <video width="80" height="80" controls onclick="showModalVideo()">
+                <source src="strap_video.mp4" type="video/mp4">
+                Seu navegador não suporta o elemento de vídeo.
+            </video>
         </div>
+    </div>
+</div>
+
+<!-- Modal para o vídeo -->
+<div id="video-modal" class="video-modal">
+    <div class="modal-content">
+        <span class="close-btn" onclick="closeModal()">&times;</span>
+        <video id="modal-video" width="100%" controls>
+            <source src="strap_video.mp4" type="video/mp4">
+            Seu navegador não suporta o elemento de vídeo.
+        </video>
+    </div>
+</div>
+
+<!-- Estilos do Modal -->
+<style>
+    .video-modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-content {
+        position: relative;
+        max-width: 80%;
+        max-height: 80%;
+        background-color: #fff;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: #fff;
+        font-size: 30px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .close-btn:hover {
+        color: #f44336;
+    }
+</style>
+
+<!-- Script para controlar o Modal -->
+<script>
+    function showModalVideo() {
+        var modal = document.getElementById("video-modal");
+        modal.style.display = "flex";
+        var video = document.getElementById("modal-video");
+        video.play(); // Inicia o vídeo assim que o modal é aberto
+    }
+
+    function closeModal() {
+        var modal = document.getElementById("video-modal");
+        modal.style.display = "none";
+        var video = document.getElementById("modal-video");
+        video.pause(); // Pausa o vídeo ao fechar o modal
+        video.currentTime = 0; // Reseta o vídeo para o início
+    }
+</script>
+
 
         <!-- Informações -->
         <div class="info-section">
