--- a/index.html
+++ b/index.html
@@ -6,34 +6,29 @@
     <title>DFE Fitness</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('background.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: #333;
-        }
+body {
+    width: 100vw;
+    overflow-x: hidden;
+}
 
-        .banner-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+.container {
+    width: 90%;
+    max-width: 1200px;
+}
 
         #fundo {
-            background-image: url('fundo.png');
-            background-size: cover;
-            background-position: center;
-            height: 250px;
-            width: 100%;
-            border-radius: 0 0 10px 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    background-image: url('fundo.png');
+    background-size: cover;
+    background-position: center;
+    height: 30vh; /* Altura inicial em relação à altura da tela */
+    width: 100%;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    margin-bottom: 40px;	
         }
 
         .container {
+            width: 90%;
             max-width: 1200px;
             margin: -10px auto 0;
             padding: 20px;
@@ -51,6 +46,7 @@
 
         .category {
             text-align: center;
+	    width: 100%;
         }
 
         .category i {
@@ -74,11 +70,13 @@
             gap: 20px;
             flex-wrap: wrap;
             margin-bottom: 40px;
+	    flex-direction: column;
         }
 
         .product-image {
             flex: 2;
             text-align: center;
+            width: 100%;
         }
 
         .product-image img {
@@ -99,6 +97,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
         }
 
         .product-title {
@@ -177,16 +176,55 @@
             font-size: 30px;
         }
 
-        @media (max-width: 768px) {
-            .product-image, .product-details {
-                flex-basis: 100%;
-            }
+@media (max-width: 768px) {
+    .product-image, .product-details {
+        flex-basis: 100%;
+    }
 
-            .thumbnail-gallery img {
-                width: 60px;
-                height: 60px;
-            }
-        }
+    .thumbnail-gallery img {
+        width: 50px;
+        height: 50px;
+    }
+
+    #coqueteleira .thumbnail-gallery {
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+
+    #coqueteleira .thumbnail-gallery img {
+        display: inline-block;
+        margin-right: 10px;
+    }
+
+    .product-section {
+        margin-bottom: 20px;
+    }
+
+    .container{
+        padding: 10px;
+    }.categories {
+        display: flex; /* Usa flexbox para manter a linha horizontal */
+        justify-content: space-around; /* Distribui os ícones uniformemente */
+        padding: 10px 0; /* Reduz o padding para melhor ajuste em telas menores */
+    }
+
+    .category {
+        text-align: center;
+        flex: 1; /* Permite que os ícones se adaptem à largura da tela */
+    }
+
+    .category i {
+        font-size: 30px; /* Reduz o tamanho dos ícones para melhor ajuste em telas menores */
+    }
+
+    .category p {
+        font-size: 14px; /* Reduz o tamanho do texto para melhor ajuste em telas menores */
+    }
+	    #fundo {
+        height: 20vh; /* Altura reduzida em telas menores */
+	margin-bottom: 20px;
+    }
+}
 
         .zoomed-image {
             position: fixed;
