--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@ body {
     padding: 15px;
     border-radius: 50%;
     cursor: pointer;
-    z-index: 1000; /* Garante que o botão fique acima de outros elementos */
+    z-index: 1000;
 }
 
-        .footer-whatsapp i {
-            color: white;
-            font-size: 30px;
-        }
+.footer-whatsapp i {
+    color: white;
+    font-size: 30px;
+}
 
 @media (max-width: 768px) {
     .product-image, .product-details {
@@ -304,6 +304,15 @@ body {
             line-height: 1.6;
             color: #555;
         }
+    .footer-whatsapp {
+        bottom: 10px;
+        right: 10px;
+        padding: 10px;
+    }
+
+    .footer-whatsapp i {
+        font-size: 24px;
+    }
     </style>
 </head>
 <body>
