--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ body {
     bottom: 20px;
     right: 20px;
     background-color: #25d366;
-    padding: 15px;
+    padding: 15px 20px; /* Aumenta o padding para tornar o botão maior */
     border-radius: 50%;
     cursor: pointer;
     z-index: 1000;
@@ -305,13 +305,13 @@ body {
             color: #555;
         }
     .footer-whatsapp {
-        bottom: 10px;
-        right: 10px;
-        padding: 10px;
+        bottom: 15px;
+        right: 15px;
+        padding: 12px 16px; /* Ajusta o padding para telas menores */
     }
 
     .footer-whatsapp i {
-        font-size: 24px;
+        font-size: 26px; /* Ajusta o tamanho do ícone para telas menores */
     }
     </style>
 </head>
