--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 body {
     width: 100vw;
     overflow-x: hidden; /* Evita rolagem horizontal */
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    font-family: 'Arial', sans-serif;
 }
 
 .container {
@@ -59,11 +64,12 @@ body {
             transition: color 0.3s;
         }
 
-        .category p {
+       .category p {
             margin-top: 10px;
             font-size: 18px;
             font-weight: bold;
-        }
+            color: #FF0055; /* Adicione esta linha */
+}
 
         .category:hover i {
             color: #ff6b6b;
