--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
   <style>
 body {
     width: 100vw;
-    overflow-x: hidden; /* Evita rolagem horizontal */
+    overflow-x: hidden; /* Adicionado para remover a barra de rolagem horizontal */
     background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     font-family: 'Arial', sans-serif;
+    margin: 0;
 }
 
 .container {
     width: 90%;
     max-width: 1200px;
+    margin: 0;
 }
 
-        #fundo {
+#fundo {
     background-image: url('fundo.png');
     background-size: cover;
     background-position: center;
-    height: 30vh; /* Altura inicial em relação à altura da tela */
+    height: 250px;
     width: 100%;
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    margin-bottom: 40px;	
-        }
+}
 
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: -10px auto 0;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
+.container {
+    width: 90%; /* Garante que o banner ocupe toda a largura */
+    margin: -10px auto 0;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
 
         .categories {
             display: flex;
@@ -75,19 +75,18 @@ body {
             color: #ff6b6b;
         }
 
-        .product-section {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin-bottom: 40px;
-	    flex-direction: column;
-        }
+.product-section {
+    display: block;
+    margin-bottom: 40px;
+    width: 100%;
+    text-align: center;
+}
 
-        .product-image {
-            flex: 2;
-            text-align: center;
-            width: 100%;
-        }
+.product-image {
+    width: 80%;
+    margin: 0 auto;
+    box-sizing: border-box; /* Adicionado */
+}
 
         .product-image img {
             max-width: 100%;
@@ -97,18 +96,21 @@ body {
             transition: transform 0.3s ease;
         }
 
-        .product-image img:hover {
-            transform: scale(1.05);
-        }
+.product-image {
+    width: 50%;
+    margin: 0 auto;
+}
 
-        .product-details {
-            flex: 1;
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-        }
+.product-details {
+    width: 80%;
+    margin: 20px auto;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    box-sizing: border-box; /* Adicionado */
+}
 
         .product-title {
             font-size: 22px;
@@ -171,6 +173,15 @@ body {
             border-radius: 5px;
             cursor: pointer;
         }
+.info-section {
+    background-color: #f4f4f4;
+    padding: 40px;
+    text-align: center;
+    margin-top: 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+}
 
 .footer-whatsapp {
     position: fixed;
@@ -186,6 +197,10 @@ body {
 .footer-whatsapp i {
     color: white;
     font-size: 30px;
+}
+
+.hidden {
+    display: none;
 }
 
 @media (max-width: 768px) {
@@ -322,9 +337,9 @@ body {
     </style>
 </head>
 <body>
-    <div class="banner-container">
-        <div id="fundo"></div>
-    </div>
+<div class="banner-container">
+    <div id="fundo"></div>
+</div>
 
     <div class="container">
         <div class="categories">
@@ -502,36 +517,56 @@ body {
     </div>
 
     <script>
-        function changeImage(image) {
-            document.getElementById('main-image').src = image;
-        }
+function changeImage(image) {
+    document.getElementById('main-image').src = image;
+}
 
-        function changeImageSecondProduct(image) {
-            document.getElementById('main-image-2').src = image;
-        }
+function changeImageSecondProduct(image) {
+    document.getElementById('main-image-2').src = image;
+}
 
-        function changeImageThirdProduct(image) {
-            document.getElementById('main-image-3').src = image;
-        }
+function changeImageThirdProduct(image) {
+    document.getElementById('main-image-3').src = image;
+}
 
-        function changeImageMola(image) {
-            document.getElementById('main-image-4').src = image;
-        }
+function changeImageMola(image) {
+    document.getElementById('main-image-4').src = image;
+}
 
-        function changeImageStrap(image) {
-            document.getElementById('main-image-5').src = image;
-        }
+function changeImageStrap(image) {
+    var videoElement = document.getElementById('main-image-5-video');
+    videoElement.pause();
+    document.getElementById('main-image-5-img').src = image;
+    document.getElementById('main-image-5-img').classList.remove('hidden');
+    videoElement.classList.add('hidden');
+}
 
-        function zoomImage(image) {
-            const zoomedImage = document.getElementById('zoomed-image');
-            const zoomedImg = zoomedImage.querySelector('img');
-            zoomedImg.src = image.src;
-            zoomedImage.classList.add('open');
-        }
+document.getElementById('video-thumbnail').addEventListener('click', function() {
+    var videoSrc = this.getAttribute('data-video-src');
+    var videoElement = document.getElementById('main-image-5-video');
+    videoElement.src = videoSrc;
+    videoElement.classList.remove('hidden');
+    document.getElementById('main-image-5-img').classList.add('hidden');
+});
 
-        function closeZoom() {
-            document.getElementById('zoomed-image').classList.remove('open');
-        }
+document.getElementById('main-image-5-video').addEventListener('click', function() {
+    var videoElement = document.getElementById('main-image-5-video');
+    if (videoElement.getAttribute('controls')) {
+        videoElement.classList.add('hidden');
+        document.getElementById('main-image-5-img').classList.remove('hidden');
+    }
+});
+
+function zoomImage(image) {
+    const zoomedImage = document.getElementById('zoomed-image');
+    const zoomedImg = zoomedImage.querySelector('img');
+    zoomedImg.src = image.src;
+    zoomedImage.classList.add('open');
+}
+
+function closeZoom() {
+    document.getElementById('zoomed-image').classList.remove('open');
+}
 	
 function changeImageStrap(image) {
     var videoElement = document.getElementById('main-image-5-video');
