--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
 .product-image {
     width: 80%;
     margin: 0 auto;
-    box-sizing: border-box; /* Adicionado */
+    box-sizing: border-box;
 }
 
         .product-image img {
@@ -109,7 +109,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
-    box-sizing: border-box; /* Adicionado */
+    box-sizing: border-box;
 }
 
         .product-title {
@@ -180,7 +180,9 @@ body {
     margin-top: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 80%; /* Usar a mesma largura dos outros painéis */
+    margin: 40px auto; /* Centralizar o painel */
+    box-sizing: border-box; /* Adicionado */
 }
 
 .footer-whatsapp {
