--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
     box-sizing: border-box;
+    padding-top: 0.5px; /* Reduza ou remova este valor */
 }
 
         .product-title {
