--- a/index.html
+++ b/index.html
@@ -330,15 +330,21 @@ body {
             line-height: 1.6;
             color: #555;
         }
-    .footer-whatsapp {
-        bottom: 15px;
-        right: 15px;
-        padding: 12px 16px; /* Ajusta o padding para telas menores */
-    }
+.footer-whatsapp {
+    position: fixed;
+    bottom: 50px; /* Aumentado o valor para mover o botão para cima */
+    right: 20px;
+    background-color: #25d366;
+    padding: 15px 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1000;
+}
 
-    .footer-whatsapp i {
-        font-size: 26px; /* Ajusta o tamanho do ícone para telas menores */
-    }
+.footer-whatsapp i {
+    color: white;
+    font-size: 30px;
+}
 .footer-panel {
     background-color: #f0f0f0;
     padding: 10px 0;
