--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@ body {
     margin-top: 20px; /* Adicionado: margem superior para separar do painel "Sobre nós" */
 }
 
+.footer-panel {
+    background-color: #f0f0f0;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 40px;
+}
+
 .footer-social {
     display: flex;
     justify-content: center;
@@ -380,12 +387,15 @@ body {
     display: flex;
     align-items: center;
     color: #25D366;
-    font-weight: bold;
     text-decoration: none;
 }
 
+.whatsapp-contact a i { /* Estilo para o ícone do WhatsApp */
+    font-size: 1.2em; /* Aumenta o tamanho do ícone */
+}
+
 .social-text {
-    margin-left: 1px;
+    margin-left: 5px;
     font-size: 0.9em;
     color: #555;
 }
