--- a/index.html
+++ b/index.html
@@ -440,14 +440,13 @@ body {
     <div class="thumbnail-gallery">
       <img src="camiseta1.jpg" alt="Camiseta Frente" onclick="changeImage('main-image-camiseta', 'camiseta1.jpg')">
       <img src="camiseta2.jpg" alt="Camiseta Costas" onclick="changeImage('main-image-camiseta', 'camiseta2.jpg')">
-      <img src="camiseta3.jpg" alt="Detalhe Estampa" onclick="changeImage('main-image-camiseta', 'camiseta3.jpg')">
     </div>
 
     <h1>Camiseta Personalizada</h1>
     <p>Camiseta de algodão 100%, com estampas exclusivas. Tecido leve e confortável, ideal para uso diário ou brindes promocionais.</p>
     
     <div class="product-buttons">
-      <a href="https://wa.me/SEUNUMERO" class="whatsapp-button" target="_blank">Fale conosco no WhatsApp</a>
+      <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20no%20Coqueteleira%20DFE%20FIT%20600%20ML.%20Preço:%20R$%2025,00." target="_blank" class="whatsapp-button">
     </div>
   </div>
 </div>
