--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ body {
 <!-- Camiseta -->	    
   <div class="container">
   <div class="product">
-    <img id="main-image-camiseta" src="camiseta1.jpg" alt="Camiseta Personalizada" class="main-image">
+    <img id="main-image-camiseta" src="camiseta1.jpg" alt="Camiseta Personalizada" class="main-image" onclick="zoomImage(this)>
     
     <div class="thumbnail-gallery">
       <img src="camiseta1.jpg" alt="Camiseta Frente" onclick="changeImage('main-image-camiseta', 'camiseta1.jpg')">
