--- a/index.html
+++ b/index.html
@@ -455,6 +455,38 @@ body {
     </div>
 </div>
 
+	    <!-- Coqueteleira -->
+<div id="coqueteleira" class="product-section">
+    <div class="product-image">
+        <img id="main-image" src="large_roxa.jpg" alt="Coqueteleira Roxa" onclick="zoomImage(this)">
+    </div>
+    <div class="product-details">
+        <h2 class="product-title">Coqueteleira DFE FIT 600 ML</h2>
+        <p class="product-price">R$ 25,00</p>
+        <div class="colors">
+            <p>Cor:</p>
+            <button onclick="changeImage('large_roxa.jpg')">Roxa</button>
+            <button onclick="changeImage('large_branco_perolado.jpg')">Branco Perolado</button>
+            <button onclick="changeImage('large_preto_fume.jpg')">Preto Fumê</button>
+            <button onclick="changeImage('large_rosa.jpg')">Pink</button>
+            <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
+            <button onclick="changeImage('large_verde.jpg')">Verde</button>
+        </div>
+        <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20na%20Coqueteleira%20DFE%20FIT%20600%20ML.%20Preço:%20R$%2025,00." target="_blank" class="whatsapp-button">
+            <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
+        </a>
+        <div class="thumbnail-gallery">
+            <img src="large_roxa.jpg" alt="Coqueteleira Roxa" onclick="changeImage('large_roxa.jpg')">
+            <img src="large_branco_perolado.jpg" alt="Coqueteleira Branco Perolado" onclick="changeImage('large_branco_perolado.jpg')">
+            <img src="large_preto_fume.jpg" alt="Coqueteleira Preto Fumê" onclick="changeImage('large_preto_fume.jpg')">
+            <img src="large_azul_tifanni.jpg" alt="Coqueteleira Azul Tiffany" onclick="changeImage('large_azul_tifanni.jpg')">
+            <img src="large_rosa.jpg" alt="Coqueteleira Rosa" onclick="changeImage('large_rosa.jpg')">
+            <img src="large_verde.jpg" alt="Coqueteleira Verde" onclick="changeImage('large_verde.jpg')">    
+        </div>
+    </div>
+</div>
+
+
         <!-- Garrafas -->
         <div id="garrafa" class="product-section">
             <div class="product-image">
