--- a/index.html
+++ b/index.html
@@ -455,36 +455,29 @@ body {
     </div>
 </div>
 
-	    <!-- Coqueteleira -->
-<div id="coqueteleira" class="product-section">
+<!-- Camiseta -->
+<div id="camiseta" class="product-section">
     <div class="product-image">
-        <img id="main-image" src="large_roxa.jpg" alt="Coqueteleira Roxa" onclick="zoomImage(this)">
+        <img id="main-image-camiseta" src="camiseta1.jpg" alt="Camiseta Personalizada" onclick="zoomImage(this)">
     </div>
     <div class="product-details">
-        <h2 class="product-title">Coqueteleira DFE FIT 600 ML</h2>
-        <p class="product-price">R$ 25,00</p>
+        <h2 class="product-title">Camiseta Personalizada</h2>
+        <p class="product-price">R$ 35,00</p>
         <div class="colors">
-            <p>Cor:</p>
-            <button onclick="changeImage('large_roxa.jpg')">Roxa</button>
-            <button onclick="changeImage('large_branco_perolado.jpg')">Branco Perolado</button>
-            <button onclick="changeImage('large_preto_fume.jpg')">Preto Fumê</button>
-            <button onclick="changeImage('large_rosa.jpg')">Pink</button>
-            <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
-            <button onclick="changeImage('large_verde.jpg')">Verde</button>
+            <p>Modelo:</p>
+            <button onclick="changeImage('main-image-camiseta', 'camiseta1.jpg')">Frente</button>
+            <button onclick="changeImage('main-image-camiseta', 'camiseta2.jpg')">Costas</button>
         </div>
-        <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20na%20Coqueteleira%20DFE%20FIT%20600%20ML.%20Preço:%20R$%2025,00." target="_blank" class="whatsapp-button">
+        <a href="https://wa.me/5515997265082?text=Olá!%20Tenho%20interesse%20na%20Camiseta%20Personalizada.%20Preço:%20R$%2035,00." target="_blank" class="whatsapp-button">
             <i class="fab fa-whatsapp"></i> Comprar via WhatsApp
         </a>
         <div class="thumbnail-gallery">
-            <img src="large_roxa.jpg" alt="Coqueteleira Roxa" onclick="changeImage('large_roxa.jpg')">
-            <img src="large_branco_perolado.jpg" alt="Coqueteleira Branco Perolado" onclick="changeImage('large_branco_perolado.jpg')">
-            <img src="large_preto_fume.jpg" alt="Coqueteleira Preto Fumê" onclick="changeImage('large_preto_fume.jpg')">
-            <img src="large_azul_tifanni.jpg" alt="Coqueteleira Azul Tiffany" onclick="changeImage('large_azul_tifanni.jpg')">
-            <img src="large_rosa.jpg" alt="Coqueteleira Rosa" onclick="changeImage('large_rosa.jpg')">
-            <img src="large_verde.jpg" alt="Coqueteleira Verde" onclick="changeImage('large_verde.jpg')">    
+            <img src="camiseta1.jpg" alt="Camiseta Frente" onclick="changeImage('main-image-camiseta', 'camiseta1.jpg')">
+            <img src="camiseta2.jpg" alt="Camiseta Costas" onclick="changeImage('main-image-camiseta', 'camiseta2.jpg')">
         </div>
     </div>
 </div>
+
 
 
         <!-- Garrafas -->
